# rust-on-android-mini

./: Cargo.toml  README.md
src/: lib.rs
