[package]
name = "rust-on-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/referen
ce/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = "0.21.1"
rand = "0.8.5"

[lib]
name = "rust_on_android"
crate-type = ["dylib"]
